# SalesAI

./: .dockerignore  .gitignore  CONFIG_STANDARDIZATION_SUMMARY.md  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  Dockerfile.monitoring  README.md  REFACTORING_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  docker-compose.override.yml  docker-compose.override1.yml  docker-compose.yaml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.astro/: config.yaml
backend/: .env.example  .gitignore  dvc.yaml  main.py  pyproject.toml  requirements.txt
backend/api/: main.py  model_manager.py  prediction.py
backend/configs/: dataset_config.yaml  features.yaml  ml_config.yaml  ml_features.yaml
backend/configs/configs/: m5_dataset.yaml  m5_features.yaml
backend/dags/: sales_forecasting_dag.py
backend/dags/tasks/: extract_data_task.py  model_deployement_tasks.py  prepare_and_train_task.py  training_tasks.py
backend/diagnostics/: diagnosis.json  diagnosis_report.md
backend/monitoring/: docker-compose.yml
backend/monitoring/alertmanager/: alertmanager.yml
backend/monitoring/example_app/: app.py
backend/monitoring/prometheus/: prometheus.yml  rules.yml
backend/practice/: backtesting.ipynb  data_extraction.ipynb  data_ingestion.ipynb  data_practice.ipynb  feature_engineering.ipynb  model_trainer.ipynb
backend/src/: pipeline.py  prediction_pipeline.py  run_backtest.py  run_features.py  run_ingestion.py
backend/src/backtest/: backtesting.py
backend/src/config/: config.py  m5_config_loader.py
backend/src/data_pipelines/: data_generator.py  external_fetchers.py  ingester.py  preprocess.py  production_ingester.py  validators.py
backend/src/entity/: backtest_entity.py  drift_entity.py  ingest_entity.py  prediction_entity.py
backend/src/exception/: __init__.py
backend/src/features/: feature_pipeline.py  m5_feature_pipeline.py
backend/src/logger/: __init__.py
backend/tests/: conftest.py
backend/ui/: app.py  entrypoint.sh
(+93 files in other folders)
