
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesai"
version = "0.1.0"
description = "Forecasting Pipeline"
authors = [
  { name="Aditya AK", email="aakuskar.980@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Core dependencies for generator + Airflow integration
dependencies = [
  "pandas",
  "numpy",
  "pyarrow", # Parquet support
  "fastparquet>=2024.2",
  "holidays",
  "mlflow",
  "boto3",
  "sqlalchemy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.4",          
  "ipython",
  "jupyterlab"
]
airflow = [
  "apache-airflow==2.5.3"
]

[project.scripts]
generate-sales = "src.data_generator:cli"
